Deploy/Mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
      matchLabels:
        app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.4
        securityContext:
          privileged: true
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
      volumes:
      - name: mysql-persistent-storage
        hostPath:
          path: /opt/data/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
    selector:
        app: mysql
    type: NodePort
    ports:
    - protocol: TCP
      port: 3306
      nodePort: 30001
      targetPort: 3306
