Deploy/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: server-gateway
spec:
    selector:
        istio: ingressgateway # use istio default controller
    servers:
    - name: server
      port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
