Deploy/Server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ${image_url}
          ports:
            - containerPort: 808
          volumeMounts:
            - mountPath: /app/Public
              name: static
          livenessProbe:
            httpGet:
              path: /server/update
              port: 808
            initialDelaySeconds: 30
            periodSeconds: 1800
      volumes:
        - name: static
          hostPath:
            path: /version
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server-vue
  name: server-vue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-vue
  template:
    metadata:
      labels:
        app: server-vue
    spec:
      containers:
        - image: ${vue-image}
          name: server-vue
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vue-server
spec:
  selector:
    app: server-vue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 808
      targetPort: 808
---
apiVersion: v1
kind: Service
metadata:
  name: gld-server
spec:
  type: ClusterIP
  ports:
    - port: 61020
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gld-server
subsets:
- addresses:
    - ip: 10.1.2.101
  ports:
    - port: 61020
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - "*"
  gateways:
    - server-gateway
  http:
    - match:
      - uri:
          prefix: "/server"
      route:
        - destination:
            host: gld-server
            port:
              number: 61020
    - match:
      - uri:
          prefix: "/user/"
      route:
        - destination:
            host: server
            port:
              number: 808
    - match:
      - uri:
          prefix: "/admin/"
      route:
        - destination:
            host: server
            port:
              number: 808
    - match:
      - uri:
          prefix: "/static/"
      route:
        - destination:
            host: server
            port:
                number: 808
    - match:
      - uri:
          exact: "/"
      route:
        - destination:
            host: server
            port:
              number: 808
    - route:
      - destination:
          host: vue-server
          port:
            number: 80
